--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.15",
+    "@react-spring/parallax": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uidotdev/usehooks": "^2.1.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "gh-pages": "^5.0.0",
