--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-image-gallery": "^1.2.12",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-text-transition": "^3.1.0",
+    "react-tilt": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
